--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ UI Designer" width="264" height="260">
                 <p class="p-foot">Increase the flow of customers and sales for your business with digital marketing &
                     growth solutions.</p>
             </div>
-            <div>
+            <div class="soc-div">
                 <p class="p-foot-index">Social media</p>
                 <ul class="ul-foot">
                     <li class="li-foot">
@@ -394,7 +394,7 @@ UI Designer" width="264" height="260">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
-            <p class="p-modal"></p>
+            <p class="p-modal">Leave your contacts and we will call you back</p>
             <form action="#">
                 <div class="mod-form-div">
                     <label for="user-name" class="mod-label">Name</label>
@@ -429,7 +429,7 @@ UI Designer" width="264" height="260">
                         cols="30" rows="10"></textarea>
                 </div>
                 <div class="mod-five">
-                    <input type="checkbox" id="user-privacy" value="true" name="user-privacy" class="visually-hidden">
+                    <input type="checkbox" id="user-privacy" value="true" name="user-privacy" class="input-check">
                     <label for="user-privacy" class="mod-five-label">I accept the terms and conditions of the
                         <span class="mod-span checked">
                             <svg class="mod-form-icon" width="10" height="8">
@@ -444,6 +444,7 @@ UI Designer" width="264" height="260">
         </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
