--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
     <!-- Main -->
     <main class="main">
-        <section class="orderservice">
+        <section class="orderservice container">
             <div class="container main-img">
                 <h1 class="tittle">Effective Solutions for Your Business</h1>
                 <button type="button" class="button" data-modal-open>Order Service</button>
