--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/modern-normalize.min.css">
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -23,14 +23,15 @@
         <div class="head-div container">
             <nav class="nav">
                 <a class="logo link" href="./index.html">Web<span class="headstudio">Studio</span></a>
-                <ul class="list">
-                    <li class="link"><a class="head-a link" href="./index.html" target="_blank">Studio</a></li>
+                <ul hidden class="list">
+                    <li class="link"><a class="head-a link head-a--active" href="./index.html"
+                            target="_blank">Studio</a></li>
                     <li class="link"><a class="head-a link" href="./portfolio.html" target="_blank">Portfolio</a></li>
                     <li class="link"><a class="head-a link" href="" target="_blank">Contacts</a></li>
                 </ul>
             </nav>
             <address class="adress">
-                <ul class="list ul-adress">
+                <ul hidden class="list ul-adress">
                     <li class="menu-item">
                         <a class="menu-item link" href="mailto:info@devstudio.com"
                             target="_blank">info@devstudio.com</a>
@@ -40,23 +41,29 @@
                     </li>
                 </ul>
             </address>
+            <button class="burger-btn" type="button">
+                <svg class="burger-svg" width="32" height="22">
+                    <use href="./images/icons.svg#icon-hamburger"></use>
+                </svg>
+            </button>
         </div>
+
     </header>
     <!-- Main -->
     <main class="main">
         <section class="orderservice container">
-            <div class="container main-img">
+            <div class="main-img">
                 <h1 class="tittle">Effective Solutions for Your Business</h1>
                 <button type="button" class="button" data-modal-open>Order Service</button>
             </div>
         </section>
         <!-- Products-->
         <section class="img-section list">
-            <div class="container">
+            <div class="container container-prod">
                 <h2 class="visually-hidden">Products</h2>
                 <ul class="list-products list">
                     <li class="li-prod">
-                        <div class="container-products">
+                        <div hidden class="container-products">
                             <svg class="icon" width="64" height="64">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
@@ -66,9 +73,9 @@
                             problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li class="li-prod">
-                        <div class="container-products">
+                        <div hidden class="container-products">
                             <svg class="icon" width="64" height="64">
-                                <use href="./images/icons.svg#ion-castronaut"></use>
+                                <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
                         <h3 class="list-tittle">Punctuality</h3>
@@ -78,9 +85,9 @@
                             time.</p>
                     </li>
                     <li class="li-prod">
-                        <div class="container-products">
+                        <div hidden class="container-products">
                             <svg class="icon" width="64" height="64">
-                                <use href="./images/icons.svg#icon-clock"></use>
+                                <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
                         <h3 class="list-tittle">Diligence</h3>
@@ -90,9 +97,9 @@
                             minimize risk.</p>
                     </li>
                     <li class="li-prod">
-                        <div class="container-products">
+                        <div hidden class="container-products">
                             <svg class="icon" width="64" height="64">
-                                <use href="./images/icons.svg#icon-diagram"></use>
+                                <use href="./images/icons.svg#ion-castronaut"></use>
                             </svg>
                         </div>
                         <h3 class="list-tittle">Technologies</h3>
@@ -122,7 +129,7 @@
         </section>
         <!-- Team-->
         <section class="team">
-            <div class="container">
+            <div class="container team-mobile">
                 <h2 class="about">Our Team</h2>
                 <ul class="list-team">
                     <li class="li-team li-gap">
@@ -130,7 +137,7 @@
 Product Designer" width="264" height="260">
                         <div class="div-team">
                             <h3 class="titlle-img">Mark Guerrero</h3>
-                            <p class="listp"> Product Designer</p>
+                            <p class="listp-team"> Product Designer</p>
                             <ul class="social-team">
                                 <li class="social-li">
                                     <a class="a-team" href="">
@@ -168,7 +175,7 @@ Product Designer" width="264" height="260">
 Frontend Developer" width="264" height="260">
                         <div class="div-team">
                             <h3 class="titlle-img">Tom Ford</h3>
-                            <p class="listp"> Frontend Developer</p>
+                            <p class="listp-team"> Frontend Developer</p>
                             <ul class="social-team">
                                 <li class="social-li">
                                     <a class="a-team" href="">
@@ -206,7 +213,7 @@ Frontend Developer" width="264" height="260">
 Marketing" width="264" height="260">
                         <div class="div-team">
                             <h3 class="titlle-img">Camila Garcia</h3>
-                            <p class="listp"> Marketing</p>
+                            <p class="listp-team"> Marketing</p>
                             <ul class="social-team">
                                 <li class="social-li">
                                     <a class="a-team" href="">
@@ -244,7 +251,7 @@ Marketing" width="264" height="260">
 UI Designer" width="264" height="260">
                         <div class="div-team">
                             <h3 class="titlle-img">Daniel Wilson</h3>
-                            <p class="listp"> UI Designer</p>
+                            <p class="listp-team"> UI Designer</p>
                             <ul class="social-team">
                                 <li class="social-li">
                                     <a class="a-team" href="">
@@ -332,58 +339,61 @@ UI Designer" width="264" height="260">
         </section>
     </main>
     <!-- Footer-->
-    <footer class="footer">
-        <div class="cont-footer">
-            <div class="container-footer">
-                <a class="logo-footer link" href="./index.html">Web<span class="studio">Studio</span></a>
-                <p class="p-foot">Increase the flow of customers and sales for your business with digital marketing &
-                    growth solutions.</p>
-            </div>
-            <div class="soc-div">
-                <p class="p-foot-index">Social media</p>
-                <ul class="ul-foot">
-                    <li class="li-foot">
-                        <a class="a-foot" href="">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-instagram"></use>
+    <footer class="footer ">
+        <div class="container">
+            <div class="footer__inner">
+                <div class="container-footer">
+                    <a class="logo-footer link" href="./index.html">Web<span class="studio">Studio</span></a>
+                    <p class="p-foot">Increase the flow of customers and sales for your business with digital marketing
+                        &
+                        growth solutions.</p>
+                </div>
+                <div class="soc-div">
+                    <p class="p-foot-index">Social media</p>
+                    <ul class="ul-foot">
+                        <li class="li-foot">
+                            <a class="a-foot" href="">
+                                <svg class="icon-footer" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="li-foot">
+                            <a class="a-foot" href="">
+                                <svg class="icon-footer" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="li-foot">
+                            <a class="a-foot" href="">
+                                <svg class="icon-footer" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="li-foot">
+                            <a class="a-foot" href="">
+                                <svg class="icon-footer" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="div-form">
+                    <p class="p-form">Subscribe</p>
+                    <form action="#" class="form">
+                        <label for="mail" class="label-form">
+                            <input id="mail" type="email" placeholder="E-mail" name="email" class="input-form">
+                        </label>
+                        <button type="submit" class="button-form">Subscribe
+                            <svg class="icon-form" width="24" height="24">
+                                <use href="./images/icons.svg#icon-telegram"></use>
                             </svg>
-                        </a>
-                    </li>
-                    <li class="li-foot">
-                        <a class="a-foot" href="">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="li-foot">
-                        <a class="a-foot" href="">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="li-foot">
-                        <a class="a-foot" href="">
-                            <svg class="icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="div-form">
-                <p class="p-form">Subscribe</p>
-                <form action="#" class="form">
-                    <label for="mail" class="label-form">
-                        <input id="mail" type="email" placeholder="E-mail" name="email" class="input-form">
-                    </label>
-                    <button type="submit" class="button-form">Subscribe
-                        <svg class="icon-form" width="24" height="24">
-                            <use href="./images/icons.svg#icon-telegram"></use>
-                        </svg>
-                    </button>
-                </form>
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
     </footer>
@@ -401,7 +411,7 @@ UI Designer" width="264" height="260">
                     <div class="mod-label-div">
                         <input type="text" id="user-name" class="mod-input" name="user-name">
                         <svg class="mod-form-icon" width="18" height="24">
-                            <use href="./images/icons.svg#icon-telegram"></use>
+                            <use href="./images/icons.svg#icon-person-black"></use>
                         </svg>
                     </div>
                 </div>
@@ -410,7 +420,7 @@ UI Designer" width="264" height="260">
                     <div class="mod-label-div">
                         <input type="text" id="user-phone" class="mod-input" name="user-name">
                         <svg class="mod-form-icon" width="18" height="24">
-                            <use href="./images/icons.svg#icon-telegram"></use>
+                            <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                     </div>
                 </div>
@@ -419,7 +429,7 @@ UI Designer" width="264" height="260">
                     <div class="mod-label-div">
                         <input type="text" id="user-email" class="mod-input" name="user-name">
                         <svg class="mod-form-icon" width="18" height="24">
-                            <use href="./images/icons.svg#icon-telegram"></use>
+                            <use href="./images/icons.svg#icon-email-svg"></use>
                         </svg>
                     </div>
                 </div>
