--- a/index.html
+++ b/index.html
@@ -42,12 +42,70 @@
                 </ul>
             </address>
             <button class="burger-btn" type="button">
-                <svg class="burger-svg" width="32" height="22">
-                    <use href="./images/icons.svg#icon-hamburger"></use>
-                </svg>
+                <img class="burger-svg" src="images/hamburger.svg" alt="">
             </button>
         </div>
-
+        <!-- Burger -->
+        <div class="burger-window">
+            <div class="burger-window__inner">
+                <button class="burger-window__btn">
+                    <svg class="mod-icon" width="8" height="8">
+                        <use href="./images/icons.svg#icon-close"></use>
+                    </svg>
+                </button>
+                <nav class="burger-window__nav">
+                    <ul class="burger-window__list">
+                        <li class="burger-window__item">
+                            <a class="burger-window__link" href="#">Studio</a>
+                        </li>
+                        <li class="burger-window__item">
+                            <a class="burger-window__link" href="#">Portfolio</a>
+                        </li>
+                        <li class="burger-window__item">
+                            <a class="burger-window__link" href="#">Contacts</a>
+                        </li>
+                    </ul>
+                </nav>
+                <ul class="burger-window__contacts-list">
+                    <li class="burger-window__contacts-item">
+                        <a class="burger-window__contacts-phone" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                    <li class="burger-window__contacts-item">
+                        <a class="burger-window__contacts-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                </ul>
+                <ul class="burger-window__soc-list">
+                    <li class="burger-window__soc-item">
+                        <a class="burger-window__soc-link a-team" href="#">
+                            <svg class="icon-team" width="16" height="16">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="burger-window__soc-item">
+                        <a class="burger-window__soc-link a-team" href="#">
+                            <svg class="icon-team" width="16" height="16">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="burger-window__soc-item">
+                        <a class="burger-window__soc-link a-team" href="#">
+                            <svg class="icon-team" width="16" height="16">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="burger-window__soc-item">
+                        <a class="burger-window__soc-link a-team" href="#">
+                            <svg class="icon-team" width="16" height="16">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </header>
     <!-- Main -->
     <main class="main">
@@ -116,13 +174,16 @@
                 <h2 class="about">What are we doing</h2>
                 <ul class="list-img">
                     <li class="li-img">
-                        <img src="./images/images1.jpg" alt="What are we doing" width="360" height="300">
+                        <img src="./images/images1.jpg" srcset="./images/images1@2x 2x" alt="What are we doing"
+                            width="360" height="300">
                     </li>
                     <li class="li-img">
-                        <img src="./images/images2.jpg" alt="What are we doing" width="360" height="300">
+                        <img src="./images/images2.jpg" srcset="./images/images2@2x 2x" alt="What are we doing"
+                            width="360" height="300">
                     </li>
                     <li class="li-img">
-                        <img src="./images/images3.jpg" alt="What are we doing" width="360" height="300">
+                        <img src="./images/images3.jpg" srcset="./images/images3@2x 2x" alt="What are we doing"
+                            width="360" height="300">
                     </li>
                 </ul>
             </div>
@@ -133,7 +194,7 @@
                 <h2 class="about">Our Team</h2>
                 <ul class="list-team">
                     <li class="li-team li-gap">
-                        <img class="team-img" src="./images/imagesteam1.jpg" alt="Mark Guerrero
+                        <img class="team-img" src="./images/imagesteam1.jpg" srcset="./images/imagesteam1@2x 2x" alt="Mark Guerrero
 Product Designer" width="264" height="260">
                         <div class="div-team">
                             <h3 class="titlle-img">Mark Guerrero</h3>
@@ -171,7 +232,7 @@ Product Designer" width="264" height="260">
                         </div>
                     </li>
                     <li class="li-team li-gap">
-                        <img class="team-img" src="./images/imagesteam2.jpg" alt="Tom Ford
+                        <img class="team-img" src="./images/imagesteam2.jpg" srcset="./images/imagesteam2@2x 2x" alt="Tom Ford
 Frontend Developer" width="264" height="260">
                         <div class="div-team">
                             <h3 class="titlle-img">Tom Ford</h3>
@@ -209,7 +270,7 @@ Frontend Developer" width="264" height="260">
                         </div>
                     </li>
                     <li class="li-team li-gap">
-                        <img class="team-img" src="./images/imagesteam3.jpg" alt="Camila Garcia
+                        <img class="team-img" src="./images/imagesteam3.jpg" srcset="./images/imagesteam3@2x 2x" alt="Camila Garcia
 Marketing" width="264" height="260">
                         <div class="div-team">
                             <h3 class="titlle-img">Camila Garcia</h3>
@@ -247,7 +308,7 @@ Marketing" width="264" height="260">
                         </div>
                     </li>
                     <li class="li-team li-gap">
-                        <img class="team-img" src="./images/imagesteam4.jpg" alt="Daniel Wilson
+                        <img class="team-img" src="./images/imagesteam4.jpg" srcset="./images/imagesteam4@2x 2x" alt="Daniel Wilson
 UI Designer" width="264" height="260">
                         <div class="div-team">
                             <h3 class="titlle-img">Daniel Wilson</h3>
