--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!-- Header -->
     <header class="header">
-        <div class="head-div container">
+        <div class="head-div container container-tablet">
             <nav class="nav">
                 <a class="logo link" href="./index.html">Web<span class="headstudio">Studio</span></a>
                 <ul hidden class="list">
