--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 <body>
     <!-- Header -->
     <header class="header">
-        <div class="head-div container container-tablet">
+        <div class="head-div container">
             <nav class="nav">
                 <a class="logo link" href="./index.html">Web<span class="headstudio">Studio</span></a>
-                <ul hidden class="list">
+                <ul hidden class="list ">
                     <li class="link"><a class="head-a link head-a--active" href="./index.html"
                             target="_blank">Studio</a></li>
                     <li class="link"><a class="head-a link" href="./portfolio.html" target="_blank">Portfolio</a></li>
@@ -31,7 +31,7 @@
                 </ul>
             </nav>
             <address class="adress">
-                <ul hidden class="list ul-adress">
+                <ul hidden class="list adress__list ">
                     <li class="menu-item">
                         <a class="menu-item link" href="mailto:info@devstudio.com"
                             target="_blank">info@devstudio.com</a>
