--- a/index.html
+++ b/index.html
@@ -173,17 +173,14 @@
             <div class="container">
                 <h2 class="about">What are we doing</h2>
                 <ul class="list-img">
-                    <li class="li-img">
-                        <img src="./images/images1.jpg" srcset="./images/images1@2x 2x" alt="What are we doing"
-                            width="360" height="300">
+                    <li class="li-img li-img--1">
+                        <img src="./images/images1.jpg" alt="What are we doing" width="360" height="300">
                     </li>
-                    <li class="li-img">
-                        <img src="./images/images2.jpg" srcset="./images/images2@2x 2x" alt="What are we doing"
-                            width="360" height="300">
+                    <li class="li-img li-img--2">
+                        <img src="./images/images2.jpg" alt="What are we doing" width="360" height="300">
                     </li>
-                    <li class="li-img">
-                        <img src="./images/images3.jpg" srcset="./images/images3@2x 2x" alt="What are we doing"
-                            width="360" height="300">
+                    <li class="li-img li-img--3">
+                        <img src="./images/images3.jpg" alt="What are we doing" width="360" height="300">
                     </li>
                 </ul>
             </div>
@@ -194,7 +191,7 @@
                 <h2 class="about">Our Team</h2>
                 <ul class="list-team">
                     <li class="li-team li-gap">
-                        <img class="team-img" src="./images/imagesteam1.jpg" srcset="./images/imagesteam1@2x 2x" alt="Mark Guerrero
+                        <img class="team-img team-img--1 " src="./images/imagesteam1.jpg" alt="Mark Guerrero
 Product Designer" width="264" height="260">
                         <div class="div-team">
                             <h3 class="titlle-img">Mark Guerrero</h3>
@@ -232,7 +229,7 @@ Product Designer" width="264" height="260">
                         </div>
                     </li>
                     <li class="li-team li-gap">
-                        <img class="team-img" src="./images/imagesteam2.jpg" srcset="./images/imagesteam2@2x 2x" alt="Tom Ford
+                        <img class="team-img team-img--2" src="./images/imagesteam2.jpg" alt="Tom Ford
 Frontend Developer" width="264" height="260">
                         <div class="div-team">
                             <h3 class="titlle-img">Tom Ford</h3>
@@ -270,7 +267,7 @@ Frontend Developer" width="264" height="260">
                         </div>
                     </li>
                     <li class="li-team li-gap">
-                        <img class="team-img" src="./images/imagesteam3.jpg" srcset="./images/imagesteam3@2x 2x" alt="Camila Garcia
+                        <img class="team-img team-img--3" src="./images/imagesteam3.jpg" alt="Camila Garcia
 Marketing" width="264" height="260">
                         <div class="div-team">
                             <h3 class="titlle-img">Camila Garcia</h3>
@@ -308,7 +305,7 @@ Marketing" width="264" height="260">
                         </div>
                     </li>
                     <li class="li-team li-gap">
-                        <img class="team-img" src="./images/imagesteam4.jpg" srcset="./images/imagesteam4@2x 2x" alt="Daniel Wilson
+                        <img class="team-img team-img--4" src="./images/imagesteam4.jpg" alt="Daniel Wilson
 UI Designer" width="264" height="260">
                         <div class="div-team">
                             <h3 class="titlle-img">Daniel Wilson</h3>
